# rustweb

./: .gitignore  README.md
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpserver/: Cargo.toml
s1/httpserver/public/: 404.html  health.html  index.html
s1/httpserver/src/: handler.rs  router.rs  server.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
ws/webservice/: Cargo.toml
ws/webservice/src/: handlers.rs  models.rs  routers.rs  state.rs
