[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.7.0"

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"